Fix image overflow on home page and other styling changes

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -5,17 +5,18 @@
 
 #welcome-box {
   float: left;
-  width: 67.1%;
+  width: calc(100vw - 700px);
   height: 408px;
   background-color: #476051;
-  
+  z-index: 1;
 }
 
 #welcome-box p {
   margin-left: 50px;
   margin-top: 120px;
   color: white;
-  width: 500px;
+  width: 40vw;
+  min-width: 230px;
   font-size: 30px;
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 300;
@@ -25,6 +26,8 @@
   float: right;
   width: max-content;
   height: max-content;
+  max-width: 100%;
+  overflow: hidden;
 }
 
 #btn-all-recipes {
@@ -33,5 +36,6 @@
 }
 
 #row {
-  margin-left: 20px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
